# simple_log

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  setup_vscode.sh  test_build.sh
cmake/: slogConfig.cmake.in  version_apply.sh
docs/: global_level_rule.md  performance_test.md
examples/: CMakeLists.txt  slog_spdlog_demo.hpp  spdlog_demo_main.cpp
include/slog/: sink_file.hpp  sink_none.hpp  sink_spdlog.hpp  sink_stdout.hpp  slog.hpp
src/: CMakeLists.txt  sink_file.cpp  sink_none.hpp  sink_spdlog.cpp  sink_stdout.cpp  sink_stdout.hpp  slog_logger.cpp
src/fmt/: format.cc
test/: CMakeLists.txt  run_perf_quick.sh  run_perf_spdlog.sh  run_perf_standard.sh  run_perf_stress.sh  test_all.cpp  test_file_sink.cpp  test_get_logger.cpp  test_multi_lines.cpp  test_performance.cpp  test_spdlog.cpp
